# pathfinder

./: Cargo.toml  README.md  index.html
data/: 100.txt  19.txt  4.txt  basic.txt
src/: graph.rs  main.rs  node.rs  solver.rs
src/solvers/: dp.rs  mod.rs
src/solvers/ga/: chromosome.rs  ga.rs  mod.rs  parallel.rs  sequential.rs
