[package]
name = "pathfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
egui_graphs = "0.25.1"
petgraph = "0.8.2"
rand = "0.9.1"

# Wasm related dependencies
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm
